# qisabelle

./: .env  .gitignore  .scalafmt.conf  LICENSE  README.md  ServerDockerfile  build.sc  docker-compose.yaml  docker-tests.yaml  pyproject.toml  setup.cfg
client/: extract.py  extractions.py  main.py  session.py
server/src/: ParsedTheory.scala  QIsabelleServer.scala
server/test/src/: ExampleAPITests.scala  IsabelleSessionTests.scala  SledgehammerTests.scala  TestEnvironment.scala
